twelve/spring-boot-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myservice
  template:
    metadata:
      labels:
        app: myservice
    spec:
      containers:
        - name: myservice
          imagePullPolicy: IfNotPresent
          image: dxktt/cncamp:2.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  ports:
    - name: myservice
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: myservice
