twelve/istio-specs-https.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: myservice
spec:
  gateways:
    - myservice
  hosts:
    - myservice.cncamp.io
  http:
    - match:
        - port: 443
      route:
        - destination:
            host: myservice.mytls.svc.cluster.local
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: myservice
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - myservice.cncamp.io
      port:
        name: myservice
        number:   443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: cncamp-credential
