twelve/istio-specs-tracing.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: myservice
spec:
  gateways:
    - myservice
  hosts:
    - '*'
  http:
  - match:
      - uri:
          exact: /user
    route:
      - destination:
          host: myservice
          port:
            number: 8080
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: myservice
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - '*'
      port:
        name: myservice
        number: 80
        protocol: HTTP
